[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name="automation_anywhere"
version="2.1.1"
authors=[{name="Mateus Interciso", email="minterciso@gmail.com"}]
description="A Python Package to deploy tasks on Automation Anywhere 360"
readme="README.md"
requires-python=">=3.9"
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/minterciso/pyAutomationAnywhere"
"Bug Tracker" = "https://github.com/minterciso/pyAutomationAnywhere/issues"